test_amico_output.txt
warning: No `requires-python` value found in the workspace. Defaulting to `>=3.12`.
============================= test session starts ==============================
platform linux -- Python 3.12.12, pytest-9.0.2, pluggy-1.6.0
rootdir: /home/mhough/src/dmipy
configfile: pyproject.toml
plugins: jaxtyping-0.3.5, anyio-4.12.1
collected 0 items / 1 error

==================================== ERRORS ====================================
________________ ERROR collecting dmipy_jax/tests/test_amico.py ________________
.venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../miniconda3/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
dmipy_jax/tests/test_amico.py:5: in <module>
    from dmipy_jax.inverse.amico import AMICOSolver, calculate_mean_parameter_map
dmipy_jax/__init__.py:24: in <module>
    from dmipy_jax import inverse
dmipy_jax/inverse/__init__.py:1: in <module>
    from .solvers import MicrostructureOperator, GlobalOptimizer, AMICOSolver
E     File "/home/mhough/src/dmipy/dmipy_jax/inverse/solvers.py", line 270
E       def solve_single_voxel(y_voxel):
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR dmipy_jax/tests/test_amico.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 1.17s ===============================
